<resources>
    <string name="app_name">Jamii CF App</string>
    <string name="title_activity_home">Jamii CF App</string>
    <string name="title_home">Home</string>
    <string name="title_events">Record Case</string>
    <string name="title_feedbacks">FeedBacks</string>
    <string name="title_report">Reports</string>

    <string name="text_details">For at-risk youth, the summer can be an especially challenging time. Lack of structure and guidance makes it difficult for the girls to maintain the gains they have made throughout the year. Due to the pandemic this year, the girls have had less time to solidify the progress they have made through much hard work.To prevent a downward spiral, it became apparent that a brief, intensive therapeutic program would benefit the girls and their families. As a result of the pandemic, many of the families are facing</string>
    <string name="title_activity_comment">CommentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="first_objective">Enable chief area to  upload information concerning a person with disability who is in need and require urgent attention from community</string>
    <string name="second_objective">To provide a way to make a donation, through mobile money.</string>

    <string name="third_objective">A module that will allow the community member to create accounts,this will enable them to login and check update on the issues that have arise in community concerning people with disability</string>

    <string name="forth_objective">Provide module where community member can give their feedback such as report a case of disabled person suffering of hunger or require medical attention.</string>
    <string name="fifth_objective">To generate records about various donation that were received and disbursed to people with disability.</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Area Chief</string>
    <string name="nav_header_subtitle">chief.naivasha@admin.com</string>
    <string name="nav_header_desc">Navigation headerImage</string>
    <string name="action_logout">Logout</string>
    <string name="action_feeback">Feedback</string>

    <string name="menu_admin">Approve Case</string>
    <string name="menu_addnewHomeitem">New Disability challenge</string>
    <string name="menu_donation">Donations</string>
    <string name="menu_disabilities">Challenges faced by Disabled person</string>

    <string name="title_admin">Approve Case</string>
    <string name="title_donation">Donations</string>
    <string name="title_disabilities">Challenges faced by Disabled person</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="challenges_faced_by_disabled_person">Challenges faced by Disabled person</string>
</resources>