<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_disabilities"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/challenges_faced_by_disabled_person" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_admin" />
        <item
            android:id="@+id/nav_addhomeitem"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_addnewHomeitem" />
        <item
            android:id="@+id/nav_donations"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_donation" />

    </group>
</menu>