<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_admin">

    <fragment
        android:id="@+id/nav_admin"
        android:name="com.dan.jamiicfapp.ui.jcahome.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_donations"
        android:name="com.dan.jamiicfapp.ui.jcahome.ui.recordcase.RecordcaseFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_recordcase" />

    <fragment
        android:id="@+id/nav_disburse"
        android:name="com.dan.jamiicfapp.ui.jcahome.ui.feedbacks.FeedbacksFragment"
        android:label="@string/title_feedbacks"
        tools:layout="@layout/fragment_feedbacks" />
    <fragment
        android:id="@+id/navigation_report"
        android:name="com.dan.jamiicfapp.ui.jcahome.ui.reports.ReportsFragment"
        android:label="@string/title_report"
        tools:layout="@layout/reports_fragment" />
</navigation>